@@ -53,6 +53,12 @@ At the moment <em>WL</em>s are supported but not used yet; once the tool will be
 more mature they'll be added to the repository.
 </p>
 
+<p>
+The following table contains a set of files, for each language
+checked, which can be browsed or downloaded as a .tar.gz file
+("All files" column).
+</p>
+
 <!-- HTML TABLE STARTS HERE -->
 
 <!-- HTML TABLE ENDS HERE -->
