@@ -1,3 +1,12 @@
+2005-02-09  Davide Viti  <zinosat@tiscali.it>
+
+	* check_dit.sh: Use of Denis Barbier's "check_var.pl" to detect wrong variables in strings
+
+	* index_template.html: Added a few lines telling about the table
+
+	* build_index.sh: "pt_BR" was always treated as "pt"
+	Added "Suspect vars" column
+
 2005-02-02  Davide Viti  <zinosat@tiscali.it>
 
 	* build_index.sh: added a column, for each language,
